--- a/SEG Project V2/app/src/main/res/layout/activity_selection.xml
+++ b/SEG Project V2/app/src/main/res/layout/activity_selection.xml
@@ -12,10 +12,10 @@
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="100dp"
         android:scrollbarSize="10dp"
-        android:text="Please select your user type"
-        android:textSize="21dp"
+        android:text="Select Account Type"
+        android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +25,9 @@
         android:id="@+id/buttonAttendee"
         android:layout_width="221dp"
         android:layout_height="99dp"
-        android:text="Sign in as Attendee"
+        android:backgroundTint="#3F51B5"
+        android:text="Attendee"
+        android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonOrganizer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +38,9 @@
         android:layout_width="226dp"
         android:layout_height="101dp"
         android:layout_marginBottom="100dp"
-        android:text="Sign in as Administrator"
+        android:backgroundTint="#3F51B5"
+        android:text="Administrator"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +50,9 @@
         android:id="@+id/buttonOrganizer"
         android:layout_width="222dp"
         android:layout_height="104dp"
-        android:text="Sign in as Organizer"
+        android:backgroundTint="#3F51B5"
+        android:text="Organizer"
+        android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonAdministrator"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,11 +63,11 @@
         android:id="@+id/buttonback"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:text="back"
+        android:layout_marginStart="25dp"
+        android:layout_marginBottom="25dp"
+        android:backgroundTint="#3F51B5"
+        android:text="Back"
+        android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView17"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
