--- a/SEG Project V2/app/src/main/res/layout/activity_organizer_see_attendee_event_requests.xml
+++ b/SEG Project V2/app/src/main/res/layout/activity_organizer_see_attendee_event_requests.xml
@@ -9,33 +9,36 @@
 
     <TextView
         android:id="@+id/textView26"
-        android:layout_width="425dp"
-        android:layout_height="68dp"
-        android:layout_marginTop="60dp"
+        android:layout_width="432dp"
+        android:layout_height="79dp"
+        android:layout_marginTop="55dp"
         android:background="#527689EF"
-        android:text="List of Attendee Event Requests"
+        android:text="Attendee Event            \   Requests"
         android:textAlignment="center"
         android:textSize="30dp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/lvAttendeeRequests"
-        android:layout_width="0dp"
-        android:layout_height="521dp"
+        android:layout_width="333dp"
+        android:layout_height="462dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView26" />
+        app:layout_constraintTop_toBottomOf="@+id/textView26"
+        app:layout_constraintVertical_bias="0.207" />
 
     <Button
         android:id="@+id/button_goBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="116dp"
+        android:layout_height="46dp"
         android:layout_marginStart="25dp"
         android:layout_marginBottom="25dp"
+        android:backgroundTint="#3F51B5"
         android:text="back"
+        android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -43,9 +46,11 @@
         android:id="@+id/button_approveAll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="25dp"
+        android:backgroundTint="#3F51B5"
         android:text="Approve All"
+        android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
