--- a/SEG Project V2/app/src/main/res/layout/dialogue_eventdetails.xml
+++ b/SEG Project V2/app/src/main/res/layout/dialogue_eventdetails.xml
@@ -23,7 +23,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="  Event Details:"
-            android:textSize="30dp" />
+            android:textSize="30dp"
+            android:textStyle="bold" />
 
         <Space
             android:layout_width="match_parent"
@@ -99,6 +100,7 @@
             android:id="@+id/button_dismiss"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="#3F51B5"
             android:text="Back"
             android:textSize="22dp" />
 
