--- a/SEG Project V2/app/src/main/res/layout/event_item.xml
+++ b/SEG Project V2/app/src/main/res/layout/event_item.xml
@@ -45,7 +45,9 @@
                 android:id="@+id/button_details"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Details" />
+                android:backgroundTint="#3F51B5"
+                android:text="Details"
+                android:textSize="16dp" />
 
             <View
                 android:layout_width="10dp"
@@ -55,7 +57,9 @@
             <Button
                 android:id="@+id/button_attendees"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:backgroundTint="#3F51B5"
+                android:textSize="16dp" />
 
             <View
                 android:id="@+id/view"
@@ -67,7 +71,9 @@
                 android:id="@+id/button_delete_event"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Delete" />
+                android:backgroundTint="#3F51B5"
+                android:text="Delete"
+                android:textSize="16dp" />
 
 
         </LinearLayout>
