--- a/SEG Project V2/app/src/main/res/layout/list_item.xml
+++ b/SEG Project V2/app/src/main/res/layout/list_item.xml
@@ -18,7 +18,7 @@
             android:layout_weight="1"
             android:text="FirstName:"
             android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:textSize="17dp" />
 
         <TextView
             android:id="@+id/textViewLastname"
@@ -27,7 +27,7 @@
             android:layout_weight="1"
             android:text="Lastname:"
             android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:textSize="17dp" />
     </LinearLayout>
 
     <!-- Second Row -->
@@ -43,7 +43,7 @@
             android:layout_weight="1"
             android:text="Email:"
             android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:textSize="17dp" />
 
         <TextView
             android:id="@+id/textViewPhoneNumber"
@@ -52,7 +52,7 @@
             android:layout_weight="1"
             android:text="PhoneNumber:"
             android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:textSize="17dp" />
     </LinearLayout>
 
     <!-- third Row -->
@@ -68,7 +68,7 @@
             android:layout_weight="1"
             android:text="Address:"
             android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:textSize="17dp" />
 
         <TextView
             android:id="@+id/textViewStatus"
@@ -77,7 +77,7 @@
             android:layout_weight="1"
             android:text="Status:"
             android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:textSize="17dp" />
     </LinearLayout>
 
     <!-- fourth Row -->
@@ -93,7 +93,8 @@
             android:layout_weight="1"
             android:text="OrganizationName:"
             android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:textSize="17dp" />
+
         <TextView
             android:id="@+id/textViewUserRole"
             android:layout_width="0dp"
@@ -101,11 +102,23 @@
             android:layout_weight="1"
             android:text="UserRole:"
             android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:textSize="17dp" />
 
     </LinearLayout>
 
     <!-- fifth row -->
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="10dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -113,33 +126,26 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/buttonApprove"
-            android:layout_width="10dp"
+            android:id="@+id/buttonReject"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginEnd="90dp"
-            android:textSize="12sp"
-            android:text="Approve" />
+            android:backgroundTint="#3F51B5"
+            android:text="Reject"
+            android:textSize="16dp" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
         <Button
-            android:id="@+id/buttonReject"
-            android:layout_width="10dp"
+            android:id="@+id/buttonApprove"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginStart="90dp"
-            android:textSize="12sp"
-            android:text="Reject" />
-
-
-
+            android:backgroundTint="#3F51B5"
+            android:text="Approve"
+            android:textSize="16dp" />
     </LinearLayout>
-
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="?android:attr/listDivider"
-        android:backgroundTint="#673AB7" />
 
 
 </LinearLayout>
