--- a/SEG Project V2/app/src/main/res/layout/rejectadmin.xml
+++ b/SEG Project V2/app/src/main/res/layout/rejectadmin.xml
@@ -10,35 +10,43 @@
     <!-- Title TextView -->
     <TextView
         android:id="@+id/textView16"
-        android:layout_width="match_parent"
-        android:layout_height="47dp"
-        android:text="List of rejected requests"
-        android:textSize="30sp"
+        android:layout_width="411dp"
+        android:layout_height="82dp"
+        android:layout_marginTop="30dp"
+        android:background="#527689EF"
         android:gravity="center"
-        app:layout_constraintTop_toTopOf="parent"
+        android:text="List of Rejected Requests"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- ListView for rejected requests -->
-    <ListView
-        android:id="@+id/lvRejectList"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/textView16"
-        app:layout_constraintBottom_toTopOf="@id/backButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@android:layout/simple_list_item_1" />
 
     <!-- Back Button positioned at the bottom left -->
+    <ListView
+        android:id="@+id/lvRejectList"
+        android:layout_width="335dp"
+        android:layout_height="450dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@id/backButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView16"
+        app:layout_constraintVertical_bias="0.371"
+        tools:listitem="@android:layout/simple_list_item_1" />
+
     <Button
         android:id="@+id/backButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="111dp"
+        android:layout_height="53dp"
+        android:layout_margin="16dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginBottom="25dp"
+        android:backgroundTint="#3F51B5"
         android:text="Back"
+        android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_margin="16dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
