--- a/SEG Project V2/app/src/main/res/layout/activity_organizer_see_attendee_event_requests.xml
+++ b/SEG Project V2/app/src/main/res/layout/activity_organizer_see_attendee_event_requests.xml
@@ -9,8 +9,8 @@
 
     <TextView
         android:id="@+id/textView26"
-        android:layout_width="432dp"
-        android:layout_height="79dp"
+        android:layout_width="412dp"
+        android:layout_height="86dp"
         android:layout_marginTop="55dp"
         android:background="#527689EF"
         android:text="Attendee Event            \   Requests"
@@ -22,7 +22,7 @@
 
     <ListView
         android:id="@+id/lvAttendeeRequests"
-        android:layout_width="333dp"
+        android:layout_width="wrap_content"
         android:layout_height="462dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
