--- a/SEG Project V2/app/src/main/res/layout/event_item.xml
+++ b/SEG Project V2/app/src/main/res/layout/event_item.xml
@@ -6,77 +6,71 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="411dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="124dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toStartOf="parent">
 
-        <TextView
-            android:id="@+id/textview_eventTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Event Title:" />
-
-        <TextView
-            android:id="@+id/textview_eventDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Event description:" />
-
-        <TextView
-            android:id="@+id/textview_eventDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Event Date:" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="15dp" />
-
-        <!-- Horizontal layout for buttons -->
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="100dp"
+            android:orientation="vertical">
 
-            <Button
-                android:id="@+id/button_details"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/textview_eventTitle"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#3F51B5"
-                android:text="Details"
-                android:textSize="16dp" />
+                android:text="Event Title:" />
 
-            <View
-                android:layout_width="10dp"
-                android:layout_height="wrap_content" />
-
-
-            <Button
-                android:id="@+id/button_attendees"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/textview_eventDescription"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#3F51B5"
-                android:textSize="16dp" />
+                android:text="Event description:" />
 
-            <View
-                android:id="@+id/view"
-                android:layout_width="10dp"
+            <TextView
+                android:id="@+id/textview_eventDate"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:text="Event Date:" />
 
-            <Button
-                android:id="@+id/button_delete_event"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#3F51B5"
-                android:text="Delete"
-                android:textSize="16dp" />
+                android:orientation="horizontal">
 
+                <Button
+                    android:id="@+id/button_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#3F51B5"
+                    android:text="Details"
+                    android:textSize="16dp" />
 
+                <Button
+                    android:id="@+id/button_delete_event"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#3F51B5"
+                    android:text="Delete"
+                    android:textSize="16dp" />
+
+                <Button
+                    android:id="@+id/button_attendees"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#3F51B5"
+                    android:textSize="16dp" />
+            </LinearLayout>
         </LinearLayout>
+
+        <!-- Horizontal layout for buttons -->
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="64dp"
+            android:orientation="horizontal" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
