--- a/SEG Project V2/app/src/main/res/layout/event_item.xml
+++ b/SEG Project V2/app/src/main/res/layout/event_item.xml
@@ -6,11 +6,12 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="373dp"
         android:layout_height="124dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="0dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
