--- a/SEG Project V2/app/src/main/res/layout/dialogue_eventdetails.xml
+++ b/SEG Project V2/app/src/main/res/layout/dialogue_eventdetails.xml
@@ -98,7 +98,7 @@
 
         <Button
             android:id="@+id/button_dismiss"
-            android:layout_width="match_parent"
+            android:layout_width="390dp"
             android:layout_height="wrap_content"
             android:backgroundTint="#3F51B5"
             android:text="Back"
